# autoware_trajectory_optimizer

./: BUGFIXES_AND_CHANGES.md  CMakeLists.txt  README.md  package.xml
config/: default_velocity_smoother.param.yaml  plugin_manager_example.yaml  trajectory_interpolator.param.yaml  trajectory_interpolator.yaml  trajectory_optimizer.param.yaml
config/velocity_smoothing/: default_velocity_smoother.param.yaml
include/autoware/prediction_to_trajectory_converter/: prediction_to_trajectory_converter.hpp
include/autoware/trajectory_interpolator/: trajectory_interpolator.hpp  trajectory_interpolator_params.hpp  trajectory_interpolator_structs.hpp  trajectory_point.hpp  utils.hpp
include/autoware/trajectory_interpolator/trajectory_optimizer_plugins/: trajectory_eb_smoother_optimizer.hpp  trajectory_extender.hpp  trajectory_optimizer_plugin_base.hpp  trajectory_point_fixer.hpp  trajectory_spline_smoother.hpp  trajectory_velocity_limiter.hpp  trajectory_velocity_optimizer.hpp
include/autoware/trajectory_optimizer/: plugin_manager.hpp  trajectory_optimizer.hpp  trajectory_optimizer_structs.hpp  utils.hpp
launch/: prediction_to_trajectory_converter.launch.xml  trajectory_interpolator.launch.xml  trajectory_interpolator.xml  trajectory_optimizer.launch.xml
src/: plugin_manager.cpp  prediction_to_trajectory_converter.cpp  trajectory_interpolator.cpp  trajectory_optimizer.cpp  trajectory_point.cpp  utils.cpp
src/trajectory_optimizer_plugins/: trajectory_eb_smoother_optimizer.cpp  trajectory_extender.cpp  trajectory_point_fixer.cpp  trajectory_spline_smoother.cpp  trajectory_velocity_limiter.cpp  trajectory_velocity_optimizer.cpp
tests/: test_trajectory_interpolator.cpp  test_trajectory_optimizer.cpp
