<?xml version="1.0"?>
<package format="3">
  <name>autoware_prediction_to_trajectory_converter</name>
  <version>0.39.0</version>
  <description>The autoware_prediction_to_trajectory_converter package</description>

  <maintainer email="daniel.sanchez@tier4.jp">Daniel Sanchez</maintainer>

  <license>Apache License 2.0</license>

  <author email="daniel.sanchez@tier4.jp">Daniel Sanchez</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_motion_utils</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_planning_topic_converter</depend>
  <depend>autoware_universe_utils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
