<?xml version="1.0"?>
<package format="3">
  <name>autoware_trajectory_interpolator</name>
  <version>0.39.0</version>
  <description>The autoware_trajectory_interpolator package</description>

  <maintainer email="daniel.sanchez@tier4.jp">Daniel Sanchez</maintainer>

  <license>Apache License 2.0</license>

  <author email="daniel.sanchez@tier4.jp">Daniel Sanchez</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_motion_utils</depend>
  <depend>autoware_new_planning_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_trajectory</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>autoware_velocity_smoother</depend>
  <depend>nav_msgs</depend>
  <depend>autoware_planning_topic_converter</depend>
  <depend>autoware_utils</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
